# support_app

./: .env  .env.example  .gitignore  Dockerfile  Makefile  django_docker_file  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
backend/: pyproject.toml
backend/support/: settings.py  urls.py
backend/support_app/: apps.py  tasks.py  test_tickets.py  urls.py  views.py
backend/support_app/migrations/: 0001_initial.py  0002_alter_ticket_applicant_alter_ticket_created_at_and_more.py
backend/user/: models.py  serializers.py  test_user.py  urls.py
backend/user/migrations/: 0002_alter_user_is_support_alter_user_username.py
backend/user/tests/: test_token.py
support/: celery.py  settings.py  urls.py
support_app/: models.py  serializers.py  tasks.py
user/: models.py  permissions.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
