[tool.poetry]
name = "support_app"
version = "0.1.0"
description = ""
authors = ["litvinau_alex <litvinaualex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"
psycopg2-binary = "^2.9.3"
celery = "^5.2.7"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
